<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp" >

    <TextView
        android:id="@+id/promptLocalTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prompt_local_address"
        android:textAppearance="?android:attr/textAppearanceMedium" />

	<EditText
	    android:id="@+id/localEditText"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginBottom="8dp"
	    android:hint="@string/hint_local_address"
	    android:inputType="text" >

        <requestFocus />
    </EditText>
    
        <TextView
        android:id="@+id/promptRemoteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prompt_remote_address"
        android:textAppearance="?android:attr/textAppearanceMedium" />

	<EditText
        android:id="@+id/remoteEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_remote_address"
        android:inputType="text" >
        <requestFocus />
    </EditText>
    	
</LinearLayout>